--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "phpoffice/phpexcel": "^1.8",
         "kartik-v/yii2-widget-datepicker": "*",
         "kartik-v/yii2-field-range": "*",
-        "dmstr/yii2-adminlte-asset": "^2.1"
+        "dmstr/yii2-adminlte-asset": "^2.1",
+        "sadovojav/yii2-image-thumbnail": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
