Новая сборка Polymer 3. Переделал компонент ImageList

--- a/.htaccess
+++ b/.htaccess
@@ -17,7 +17,7 @@ RewriteRule ^assets/(.*)$ /web/assets/$1 [L]
 RewriteRule ^css/(.*)$ web/css/$1 [L]
 RewriteRule ^js/(.*)$ web/js/$1 [L]
 RewriteRule ^img/(.*)$ web/img/$1 [L]
-RewriteRule ^bower_components/(.*)$ web/bower_components/$1 [L]
+RewriteRule ^node_modules/(.*)$ web/node_modules/$1 [L]
 RewriteRule (.*) /web/$1
 
 RewriteCond %{REQUEST_FILENAME} !-f
