--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "@polymer/iron-ajax": "^3.0.1",
     "@polymer/iron-pages": "^3.0.1",
     "@polymer/paper-behaviors": "^3.0.1",
+    "@polymer/paper-button": "^3.0.1",
+    "@polymer/paper-dialog": "^3.0.1",
+    "@polymer/paper-dialog-scrollable": "^3.0.1",
     "@polymer/paper-tabs": "^3.0.1",
     "@polymer/paper-toggle-button": "^3.0.1",
     "@polymer/polymer": "^3.0.0-pre.12",
     "@webcomponents/webcomponentsjs": "^1.0.20",
-    "gulp": "^3.9.1",
-    "gulp-less": "^3.3.2",
+    "gulp": "^4.0.0",
+    "gulp-less": "^4.0.1",
     "normalize.less": "^1.0.0"
   },
   "devDependencies": {
