--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@polymer/paper-toggle-button": "^3.0.1",
     "@polymer/polymer": "^3.1.0",
     "@webcomponents/webcomponentsjs": "^2.2.7",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-copy": "^4.0.1",
     "gulp-less": "^3.3.2",
