--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,11 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "phpoffice/phpexcel": "^1.8",
         "kartik-v/yii2-widget-datepicker": "*",
         "kartik-v/yii2-field-range": "*",
         "dmstr/yii2-adminlte-asset": "^2.1",
-        "sadovojav/yii2-image-thumbnail": "dev-master"
+        "sadovojav/yii2-image-thumbnail": "dev-master",
+        "phpoffice/phpspreadsheet": "^1.6"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
