--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "gulp-sourcemaps": "^2.6.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "run": "gulp serve"
   },
   "author": "",
   "license": "ISC"
