--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,8 @@
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap": "~2.0.0",
         "yiisoft/yii2-swiftmailer": "~2.0.0",
-        "kartik-v/yii2-widget-datepicker": "*",
-        "kartik-v/yii2-field-range": "*",
+        "kartik-v/yii2-widgets": "^3.4",
+        "kartik-v/yii2-field-range": "^1.3",
         "dmstr/yii2-adminlte-asset": "^2.1",
         "sadovojav/yii2-image-thumbnail": "dev-master",
         "phpoffice/phpspreadsheet": "^1.6",
