--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "dmstr/yii2-adminlte-asset": "^2.1",
         "sadovojav/yii2-image-thumbnail": "dev-master",
         "phpoffice/phpspreadsheet": "^1.6",
-        "kartik-v/yii2-widget-datetimepicker": "dev-master"
+        "kartik-v/yii2-widget-datetimepicker": "dev-master",
+        "yii-dream-team/yii2-upload-behavior": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
