--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "phpoffice/phpspreadsheet": "^1.6",
         "kartik-v/yii2-widget-datetimepicker": "dev-master",
         "yii-dream-team/yii2-upload-behavior": "*",
-        "paulzi/yii2-nested-sets": "^1.1"
+        "paulzi/yii2-nested-sets": "^1.1",
+        "zelenin/yii2-slug-behavior": "~1.5.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
