--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
         "kartik-v/yii2-field-range": "^1.3",
         "dmstr/yii2-adminlte-asset": "^2.1",
         "sadovojav/yii2-image-thumbnail": "dev-master",
-        "phpoffice/phpspreadsheet": "^1.6",
         "kartik-v/yii2-widget-datetimepicker": "dev-master",
         "yii-dream-team/yii2-upload-behavior": "*",
         "paulzi/yii2-nested-sets": "^1.1",
-        "zelenin/yii2-slug-behavior": "~1.5.1"
+        "zelenin/yii2-slug-behavior": "~1.5.1",
+        "la-haute-societe/yii2-save-relations-behavior": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
