--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "kartik-v/yii2-widgets": "^3.4",
         "kartik-v/yii2-field-range": "^1.3",
-        "dmstr/yii2-adminlte-asset": "^2.1",
-        "sadovojav/yii2-image-thumbnail": "dev-master",
+        "dmstr/yii2-adminlte-asset": "^2.1"
         "kartik-v/yii2-widget-datetimepicker": "dev-master",
         "yii-dream-team/yii2-upload-behavior": "*",
         "paulzi/yii2-nested-sets": "^1.1",
