--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,14 @@
         "yiisoft/yii2-swiftmailer": "~2.0.0",
         "kartik-v/yii2-widgets": "^3.4",
         "kartik-v/yii2-field-range": "^1.3",
-        "dmstr/yii2-adminlte-asset": "^2.1"
+        "dmstr/yii2-adminlte-asset": "^2.1",
         "kartik-v/yii2-widget-datetimepicker": "dev-master",
         "yii-dream-team/yii2-upload-behavior": "*",
         "paulzi/yii2-nested-sets": "^1.1",
         "zelenin/yii2-slug-behavior": "~1.5.1",
-        "la-haute-societe/yii2-save-relations-behavior": "*"
+        "la-haute-societe/yii2-save-relations-behavior": "*",
+        "bower-asset/owl.carousel": "^2.2",
+        "bower-asset/magnific-popup": "^1.1"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
