Добавил установку цен

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "zelenin/yii2-slug-behavior": "~1.5.1",
         "la-haute-societe/yii2-save-relations-behavior": "*",
         "bower-asset/owl.carousel": "^2.2",
-        "bower-asset/magnific-popup": "^1.1"
+      "bower-asset/magnific-popup": "^1.1",
+      "yii2-developer/yii2-extend": "~1.0.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
