Добавил поддержку env файлов

--- a/.env.dist
+++ b/.env.dist
@@ -37,7 +37,7 @@ NETWORK_PHPMYADMIN=172.72.75.5
 YII_HOST_INFO="http://sitknit.loc"
 YII_COOKIE_VALIDATION_KEY="sitknit"
 
-YII_DEBUG=true
+YII_DEBUG=1
 YII_ENV=dev
 
 EMAIL_ROBOT=
