--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,10 @@
         "zelenin/yii2-slug-behavior": "~1.5.1",
         "la-haute-societe/yii2-save-relations-behavior": "*",
         "bower-asset/owl.carousel": "^2.2",
-      "bower-asset/magnific-popup": "^1.1",
-      "2amigos/yii2-chartjs-widget": "~2.0",
-      "vlucas/phpdotenv": "~3.3.2"
+        "bower-asset/magnific-popup": "^1.1",
+        "2amigos/yii2-chartjs-widget": "~2.0",
+        "vlucas/phpdotenv": "~3.3.2",
+        "himiklab/yii2-recaptcha-widget": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
