--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.1",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-copy": "^4.0.1",
@@ -21,9 +22,9 @@
     "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-rigger": "^0.5.8",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-util": "^3.0.8",
-    "run-sequence": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.4"
+    "run-sequence": "^1.2.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
