--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "bower-asset/magnific-popup": "^1.1",
         "2amigos/yii2-chartjs-widget": "~2.0",
         "vlucas/phpdotenv": "~3.3.2",
-        "himiklab/yii2-recaptcha-widget": "*"
+        "himiklab/yii2-recaptcha-widget": "*",
+        "kartik-v/yii2-date-range": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.0.0",
